--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
-asgiref==3.8.1
+asgiref==3.7.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 crispy-bootstrap5==2023.10
-Django==5.1.1
+Django==5.0.1
 django-cors-headers==4.4.0
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
 gevent==24.2.1
-greenlet==3.1.1
+greenlet==3.0.3
 grequests==0.7.0
+gunicorn==21.2.0
 idna==3.7
 numpy==2.0.1
+packaging==23.2
 pillow==10.2.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 requests==2.32.3
+setuptools==71.1.0
 sqlparse==0.4.4
 urllib3==2.2.2
 zope.event==5.0
