--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,24 @@
-acme==1.21.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-attrs==21.2.0
-Automat==20.2.0
-bcrypt==3.2.0
-blinker==1.4
-certbot==1.21.0
-certbot-nginx==1.21.0
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-ConfigArgParse==1.5.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==3.4.8
-dbus-python==1.2.18
-distlib==0.3.8
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-filelock==3.13.1
-frozenlist==1.5.0
-gyp==0.1
-httplib2==0.20.2
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
-jeepney==0.7.1
-josepy==1.10.0
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-multidict==6.1.0
-netifaces==0.11.0
-oauthlib==3.2.0
-parsedatetime==2.6
-pexpect==4.8.0
-platformdirs==4.2.0
-propcache==0.2.1
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pydantic==1.10.19
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyICU==2.8.1
-PyJWT==2.3.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyserial==3.5
-python-apt==2.4.0+ubuntu2
-python-debian==0.1.43+ubuntu1.1
-python-magic==0.4.24
-pytz==2022.1
-PyYAML==5.4.1
-requests==2.25.1
-requests-toolbelt==0.9.1
-SecretStorage==3.3.1
-service-identity==18.1.0
-setuptools==59.6.0
-six==1.16.0
-sos==4.5.6
-ssh-import-id==5.11
-systemd-python==234
-Twisted==22.1.0
-typing_extensions==4.12.2
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-virtualenv==20.25.0
-vkwave @ https://github.com/prostomarkeloff/vkwave/archive/master.zip#sha256=8c17fb8c3ffedd8cdca2eeff10c0b69703579b6de718882128dc5e70773e65dd
-wadllib==1.3.6
-wheel==0.37.1
-xkit==0.0.0
-yarl==1.18.3
-zipp==1.0.0
-zope.component==4.3.0
-zope.event==4.4
-zope.hookable==5.1.0
-zope.interface==5.4.0
+asgiref==3.7.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
+crispy-bootstrap5==2023.10
+Django==5.0.1
+django-cors-headers==4.4.0
+django-crispy-forms==2.1
+django-debug-toolbar==4.2.0
+gevent==24.2.1
+greenlet==3.0.3
+grequests==0.7.0
+gunicorn==21.2.0
+idna==3.7
+numpy==2.0.1
+packaging==23.2
+pillow==10.2.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+requests==2.32.3
+setuptools==71.1.0
+sqlparse==0.4.4
+urllib3==2.2.2
+zope.event==5.0
+zope.interface==6.4.post2
